--- a/index.html
+++ b/index.html
@@ -59,28 +59,42 @@
         </div>
         <h2>Profile</h2>
         <div>
-            <p>Dedicated professional with a broad background in account reconciliations, cash management, technical writing, and office operations. Proficient in delivering superior customer service, engaging in effective communication, and demonstrating strong analytical skills. Experienced in web development, specializing in the creation of responsive websites. Possesses exceptional interpersonal skills, flourishes in dynamic environments, and is adept at working collaboratively. Highly proficient with the Microsoft Office suite, including Visio, Excel, Word, PowerPoint, Teams, and Outlook.</p>
+            <p>Dedicated professional with a broad background in account reconciliations, cash management, technical
+                writing, and office operations. Proficient in delivering superior customer service, engaging in
+                effective communication, and demonstrating strong analytical skills. Experienced in web development,
+                specializing in the creation of responsive websites. Possesses exceptional interpersonal skills,
+                flourishes in dynamic environments, and is adept at working collaboratively. Highly proficient with the
+                Microsoft Office suite, including Visio, Excel, Word, PowerPoint, Teams, and Outlook.</p>
         </div>
     </section>
     <hr>
-<!-- Achievements -->
-<section id="achievements">
-    <h2>Achievements</h2>
-    <div class="achievements">
-        <ul>
-            <li>Managed account reconciliations and general ledger entries during the system and vendor conversion process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the smooth progression of the conversion, and I was the sole individual in the department capable of achieving this.</li>
-            <li>Collaborated closely with managers, subject-matter experts and process owners to develop
-                accurate and
-                visually engaging diagrams showcasing process functions.</li>
-            <li>Collaborated closely with the Director of Business Operations during the department re-engineering process and this contributed to operational efficiency and excellence.</li>
-            <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in operational costs and increased productivity.</li>
-            <li>Developed personal websites using responsive design techniques ensuring seamless user experience across various devices and platforms, and demonstrating proficiency in software development. Examples: <a href="https://bashataylor.github.io/Mobille_weather_app/">Mobile Wheather App</a>, <a href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
-            </li>
-        </ul>
+    <!-- Achievements -->
+    <section id="achievements">
+        <h2>Achievements</h2>
+        <div class="achievements">
+            <ul>
+                <li>Managed account reconciliations and general ledger entries during the system and vendor conversion
+                    process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the
+                    smooth progression of the conversion, and I was the sole individual in the department capable of
+                    achieving this.</li>
+                <li>Collaborated closely with managers, subject-matter experts and process owners to develop
+                    accurate and
+                    visually engaging diagrams showcasing process functions.</li>
+                <li>Collaborated closely with the Director of Business Operations during the department re-engineering
+                    process and this contributed to operational efficiency and excellence.</li>
+                <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in
+                    operational costs and increased productivity.</li>
+                <li>Developed personal websites using responsive design techniques ensuring seamless user experience
+                    across various devices and platforms, and demonstrating proficiency in software development.
+                    Examples: <a href="https://bashataylor.github.io/Mobille_weather_app/">Mobile Wheather App</a>, <a
+                        href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
+                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
+                </li>
+            </ul>
 
-    </div>
-</section>
-<hr>
+        </div>
+    </section>
+    <hr>
 
     <!-- Skills -->
     <section id="my_skills">
@@ -214,38 +228,35 @@
                 April 2014 – September 2018
             </h6><br>
             <ul>
-                    <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
-                        May 2024 — Present &#10020;</li>
-                    <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
-                        University &#10020;
-                        April 2024 — April 2024 &#10020;</li>
-                    <li>Designing User Interfaces and Experiences (UI/UX), IBM &#10020;
-                        March 2024 — March 2024 &#10020;</li>
-                    <li>Getting Started with Front-End and Web Development, IBM &#10020;
-                        March 2024 — March 2024 &#10020;</li>
-                    <li>Introduction to Software Engineering, IBM &#10020;
-                        March 2024 — March 2024 &#10020;</li>
-                    <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
-                        March 2024 — March 2024 &#10020;</li>
-                    <li>SQL Essential Training, LinkedIn Learning &#10020;
-                        March 20, 2023 &#10020;</li>
-                    <li>Get Ready for Generative AI, LinkedIn Learning &#10020;
-                        Feb 20, 2023 &#10020;</li>
-                    <li>Ten Habits of Mentally Strong People, LinkedIn Learning &#10020;
-                        Nov 4 2022 &#10020;</li>
-                    <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
-                        June 2022 — June 2022 &#10020;</li>
-                    <li>Visio 2021 Essential Training (Office 2021/LTSC), LinkedIn Learning &#10020;
-                        June 2022 — June 2022 &#10020;</li>
-                    <li>Root Cause Analysis: Getting to the Root of Business Problems, LinkedIn Learning &#10020;
-                        June 6, 2022 &#10020;</li>
-                    <li>Statistics Foundations 1: The Basics, LinkedIn Learning &#10020;
-                        June 2, 2022 &#10020;</li>
-                    <li>Python, Coding Dojo at Colorado University &#10020;
-                        May 2021 — February 2022 &#10020;</li>
-                    <li>Web Fundamentals, Coding Dojo at Colorado University &#10020;
-                        May 2021 — February 2022 &#10020;</li>
-                </ul>
+                <li>Reviewed and processed outstanding documentation for consumer loans with high accuracy rate.</li>
+                <li>Reviewed daily imaged documents against OnBase system and updated Power Lender.</li>
+                <li>Prepared investor documents and supplied monthly reports.</li>
+                <li>Functioned as a point of contact between attorneys and customers to obtain missing documentation.
+                </li>
+                <li>Finalized processing documents such as title policies, unrecorded mortgages, recorded mortgages, and
+                    other required documentation.</li>
+            </ul>
+        </div><br><br>
+        <div class="professional_experience"><br><br>
+            <h6>Senior teller, Teller II, Teller I</h6>
+            <h6 class="professional_experience_text">Webster Bank, New Britain, CT
+                November 1993 – April 2014
+            </h6><br>
+            <ul>
+                <li>Greeted customers and fulfilled their requests by processing a variety of transactions, including
+                    deposits, withdrawals, check cashing, issuing bank checks, savings bonds, credit card advances,
+                    accurately and efficiently.</li>
+                <li>Collected and verified customer demographic information to assure accurate new account opening.</li>
+                <li>Closed and funded consumer loans according to the established guidelines.</li>
+                <li>Ensured that the branch was in balance and the daily work sent to the back-office location for
+                    further
+                    processing.</li>
+                <li>Utilized sales techniques to uncover customer needs and offered a full range of consumer and
+                    business products.</li>
+                <li>Supervised and coached team members.</li>
+                <li>Utilized professional customer service standards while participating in banking center calling
+                    initiatives.</li>
+            </ul>
         </div><br><br>
     </section><br><br><br>
     <hr>
@@ -280,11 +291,17 @@
                     <li>SQL Essential Training, LinkedIn Learning &#10020;
                         March 20, 2023 &#10020;</li>
                     <li>Get Ready for Generative AI, LinkedIn Learning &#10020;
-                        Feb 20, 2023 &#10020;</li>    
+                        Feb 20, 2023 &#10020;</li>
+                    <li>Ten Habits of Mentally Strong People, LinkedIn Learning &#10020;
+                        Nov 4 2022 &#10020;</li>
                     <li>Six Sigma Yellow Belt, LinkedIn Learning &#10020;
                         June 2022 — June 2022 &#10020;</li>
                     <li>Visio 2021 Essential Training (Office 2021/LTSC), LinkedIn Learning &#10020;
                         June 2022 — June 2022 &#10020;</li>
+                    <li>Root Cause Analysis: Getting to the Root of Business Problems, LinkedIn Learning &#10020;
+                        June 6, 2022 &#10020;</li>
+                    <li>Statistics Foundations 1: The Basics, LinkedIn Learning &#10020;
+                        June 2, 2022 &#10020;</li>
                     <li>Python, Coding Dojo at Colorado University &#10020;
                         May 2021 — February 2022 &#10020;</li>
                     <li>Web Fundamentals, Coding Dojo at Colorado University &#10020;
@@ -309,4 +326,5 @@
         </a>
     </div>
 </body>
+
 </html>
