--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
         <h2>Professional Experience</h2>
         <div style="clear:both;"></div>
         <div class="professional_experience"><br><br>
+            <h6>Career Break</h6>
+            <h6>Jan 2023 – Current</h6>
+            <br>
+            <ul>
+                <li>One of multiple people laid off due to a change in company strategy and a merger.</li>
+                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023 encountered an accident, and suffered a tripple fracture in my ancle, followed by a six months recovery.
+                </li>
+                <li>Proactively pursuied certifications and concentrated on continuous education, and once able to work, looked for an employment.</li>
+            </ul>
+        </div><br><br>
+        <div style="clear:both;"></div>
+        <div class="professional_experience"><br><br>
             <h6>Technical Writer</h6>
             <h6 class="professional_experience_text">SIRVA BGRS Worldwide, Inc., Oakbrook Terrace, IL (Remote U.S. and
                 Canada)
@@ -199,6 +211,15 @@
                 <li>Processed ATM cash transaction disputes and check deposit adjustments.</li>
                 <li>Provided prompt and courteous customer support for internal and external inquiries.</li>
                 <li>Ensured compliance with bank policies, procedures, and security measures.</li>
+            </ul>
+        </div><br><br>
+
+        <div class="professional_experience"><br><br>
+            <h6>Career Break</h6>
+            <h6>April 2021 - October 2021</h6>
+            <ul>
+                <li>One of multiple people in the department laid off due to a change in company strategy and a compay merger.</li>
+                <li>As soon as laid off, I went back to school to obtain a skill set in computer sience/web development in order to better myself.</li>
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
