--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <li>One of multiple people laid off due to a change in company strategy and a merger.</li>
                 <li>An intentional pause to focus on full-time caregiving. On July 9, 2023 encountered an accident, and suffered a tripple fracture in my ancle, followed by a six months recovery.
                 </li>
-                <li>Proactively pursuied certifications and concentrated on continuous education, and once able to work, looked for an employment.</li>
+                <li>Proactively pursuied certifications and concentrated on continuous education, and once able to work, looked for a full time employment.</li>
             </ul>
         </div><br><br>
         <div style="clear:both;"></div>
