--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
             <br>
             <ul>
                 <li>One of multiple people laid off due to a change in company strategy and a merger.</li>
-                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023 encountered an accident, and suffered a tripple fracture in my ancle, followed by a six months recovery.
+                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023 encountered an accident, and suffered a triple fracture in my ancle, followed by a six months recovery.
                 </li>
-                <li>Proactively pursuied certifications and concentrated on continuous education, and once able to work, looked for a full time employment.</li>
+                <li>Proactively pursued  certifications and concentrated on continuous education, and once able to work, looked for full-time employment.</li>
             </ul>
         </div><br><br>
         <div style="clear:both;"></div>
@@ -218,8 +218,8 @@
             <h6>Career Break</h6>
             <h6>April 2021 - October 2021</h6>
             <ul>
-                <li>One of multiple people in the department laid off due to a change in company strategy and a compay merger.</li>
-                <li>As soon as laid off, I went back to school to obtain a skill set in computer sience/web development in order to better myself.</li>
+                <li>One of multiple people in the department I was laid off due to a change in company strategy and a company merger.</li>
+                <li>Meanwhile, I went back to school to learn a new set of technical skills and obtain certifications in computer science/web development.</li>
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
