--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <br>
             <ul>
                 <li>One of multiple people laid off due to a change in company strategy and a merger.</li>
-                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023 encountered an accident, and suffered a triple fracture in my ancle, followed by a six months recovery.
+                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023, encountered an accident, and suffered a triple fracture in my ancle, followed by six months recovery.
                 </li>
                 <li>Proactively pursued  certifications and concentrated on continuous education, and once able to work, looked for full-time employment.</li>
             </ul>
