--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
                 <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in
                     operational costs and increased productivity.</li>
                 <li>Developed personal websites using responsive design techniques ensuring seamless user experience
-                    across various devices and platforms, and demonstrating proficiency in software development.
+                    across various devices and platforms and demonstrating proficiency in software development.
                     Examples: <a href="https://bashataylor.github.io/Mobille_weather_app/">Mobile Wheather App</a>, <a
                         href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
-                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
+                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>, <a
+                        href="https://bashataylor.github.io/SolarSystem/">Solar System</a>.
+                        
                 </li>
             </ul>
 
