--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                 <li>Conducted settlement and cash transaction reconciliation for multiple interfaces, ensuring accuracy
                     and efficiency.</li>
                 <li>Administered FISERV alerts and managed debit card inventory for instant issuing.</li>
+                <li>Processed daily credit card settlements for the entire bank upon receiving individual banking center settlement receipts. Tracked missing receipts to prevent potential cash losses.</li>
                 <li>Processed ATM cash transaction disputes and check deposit adjustments.</li>
                 <li>Provided prompt and courteous customer support for internal and external inquiries.</li>
                 <li>Ensured compliance with bank policies, procedures, and security measures.</li>
