--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <h3>Courses and Certifications</h3>
                 <ul>
                     <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
-                        May 2024 — Present &#10020;</li>
+                        May 2024 &#10020;</li>
                     <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
                         University &#10020;
                         April 2024 — April 2024 &#10020;</li>
