--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@
                 </ul>
                 <h3>Courses and Certifications</h3>
                 <ul>
+                    <li>SQL for Data Science, University of California, Davis &#10020;
+                        August 2024 - current &#10020;</li>
                     <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
                         May 2024 &#10020;</li>
                     <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
