--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                     across various devices and platforms and demonstrating proficiency in software development.
                     Examples: <a href="https://bashataylor.github.io/Mobile_weather_app/">Mobile Wheather App</a>, <a
                         href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
-                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>, <a
-                        href="https://bashataylor.github.io/SolarSystem/">Solar System</a>.
+                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
                         
                 </li>
             </ul>
