--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     operational costs and increased productivity.</li>
                 <li>Developed personal websites using responsive design techniques ensuring seamless user experience
                     across various devices and platforms and demonstrating proficiency in software development.
-                    Examples: <a href="https://pythonweatherproject.onrender.com">Python Weather App</a>  <a href="https://bashataylor.github.io/Mobile_weather_app/">Mobile Wheather App</a>, <a
+                    Examples: <a href="https://pythonweatherproject.onrender.com">Python Weather App</a>,  <a href="https://bashataylor.github.io/Mobile_weather_app/">Mobile Wheather App</a>, <a
                         href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
                         href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
                         
