--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </p>
             </div>
             <div class="qualifications">
-                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, SQL, and
+                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, Flask, SQL, and
                     WorldPress, Figma and Thunkable interfaces.
                 </p>
             </div>
