--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     operational costs and increased productivity.</li>
                 <li>Developed personal websites using responsive design techniques ensuring seamless user experience
                     across various devices and platforms and demonstrating proficiency in software development.
-                    Examples: <a href="https://bashataylor.github.io/Mobile_weather_app/">Mobile Wheather App</a>, <a
+                    Examples: <a href="https://mypythonweather.onrender.com">Python Weather App</a>,  <a href="https://bashataylor.github.io/Mobile_weather_app/">Front-End Wheather App</a>, <a
                         href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
                         href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
                         
@@ -156,8 +156,8 @@
                 </p>
             </div>
             <div class="qualifications">
-                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, SQL, and
-                    WorldPress, Figma and Thunkable interfaces.
+                <p>Knowledgeable in web development languages including HTML, CSS, JavaScript, Python, Django, Flask, SQL, and
+                    WorldPress, Figma, and Thunkable interfaces.
                 </p>
             </div>
         </div>
