--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
     </section>
     <div style="clear:both;"></div><br><br><br>
     <hr>
-    <div>
+    <footer>
         <p id="copy_right">&copy; 2024 Created by Barbara Taylor</p>
-    </div>
+    </footer>
     <div class="iconbutton">
         <a href="#home" aria-label="Go back up to the topmenu">
             <!--Add the code here for the logo to appear and the icon to be actionable-->
