--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <li>Developed personal websites using responsive design techniques ensuring seamless user experience
                     across various devices and platforms and demonstrating proficiency in software development.
                     Examples: <a href="https://mypythonweather.onrender.com">Python/Flask Weather App</a>, <a href="https://https://pythoncalculator.onrender.com">Python/Flask Calculator App</a>, <a href="https://bashataylor.github.io/Mobile_weather_app/">Front-End Wheather App</a>, <a
-                        href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
-                        href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
+                        href="https://bashataylor.github.io/Countdown_App/">Front-End Countdown App</a>, <a
+                        href="https://bashataylor.github.io/Carousel/ ">Front-End Photo Carousel</a>.
                         
                 </li>
             </ul>
