--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <section id="summary" class="container">
         <div class="img_container">
             <img id="profile_image" src="./html_finalprojimages/profile_pic.JPG" alt="profile picture">
-            <div class="overlay">My Name is Barbara Taylor</div>
+            <div class="overlay">Hello, My Name is Barbara Taylor</div>
         </div>
         <h2>Profile</h2>
         <div>
