--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
                 </p>
             </div>
             <div class="qualifications">
+                <p>Experienced Consumer Loan Post Closer with extensive experience in initiating consumer 
+                    loan applications, closing and funding consumer loans efficiently, and meticulously 
+                    navigating consumer loan post-closing documentation.</p>
+            </div>
+            <div class="qualifications">
                 <p>Fluent in Microsoft Office Suite, including Visio, Excel, Outlook, Word, and PowerPoint.</p>
             </div>
             <div class="qualifications">
