--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </p>
             </div>
             <div class="qualifications">
-                <p>Experienced Consumer Loan Post Closer with extensive experience in initiating consumer 
+                <p>Experienced Consumer Loan Post Closer with extensive background in initiating consumer 
                     loan applications, closing and funding consumer loans efficiently, and meticulously 
                     navigating consumer loan post-closing documentation.</p>
             </div>
