updated hamnav to show at page load

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="hamnav">
             <input type="checkbox" id="hamburger">
             <!-- <label for="hamburger_size" style="font-size: 20px;">Menu</label> -->
-            <label for="hamburger" class="hamlabel">☰ Menu</label>
+            <label for="hamburger" id="hamlabel">☰ Hide Menu</label>
             <div id="hamitems">
                 <a class="hamnav" href="#summary">Profile</a>
                 <a class="hamnav" href="#achievements">Achievements</a>
