--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
             <br>
             <ul>
                 <li>One of multiple people laid off due to a change in company strategy and a merger.</li>
-                <li>An intentional pause to focus on full-time caregiving. On July 9, 2023, encountered an accident, and suffered a triple fracture in my ancle, followed by six months recovery.
+                <li>An intentional pause to focus on full-time caregiving due to an unfortunate trimalleolar fracture accident in July 2023, which required time for recovery until February 2024.
                 </li>
-                <li>Proactively pursued  certifications and concentrated on continuous education, and once able to work, looked for full-time employment.</li>
+                <li>Proactively pursued  certifications and concentrated on continuous education, while actively seeking new opportunities.</li>
             </ul>
         </div><br><br>
         <div style="clear:both;"></div>
@@ -225,8 +225,8 @@
             <h6>Career Break</h6>
             <h6>April 2021 - October 2021</h6>
             <ul>
-                <li>One of multiple people in the department I was laid off due to a change in company strategy and a company merger.</li>
-                <li>Meanwhile, I went back to school to learn a new set of technical skills and obtain certifications in computer science/web development.</li>
+                <li>One of multiple people in the department laid off due to a change in company strategy and a company merger.</li>
+                <li>Started school to learn new technical skills and to obtain certifications in computer science/web development.</li>
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
