--- a/index.html
+++ b/index.html
@@ -73,20 +73,11 @@
         <h2>Achievements</h2>
         <div class="achievements">
             <ul>
-                <li>Managed account reconciliations and general ledger entries during the system and vendor conversion
-                    process. My expertise allowed me to successfully resolve all complex balancing issues, ensuring the
-                    smooth progression of the conversion, and I was the sole individual in the department capable of
-                    achieving this.</li>
-                <li>Collaborated closely with managers, subject-matter experts and process owners to develop
-                    accurate and
-                    visually engaging diagrams showcasing process functions.</li>
-                <li>Collaborated closely with the Director of Business Operations during the department re-engineering
-                    process and this contributed to operational efficiency and excellence.</li>
-                <li>Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in
-                    operational costs and increased productivity.</li>
-                <li>Developed personal websites using responsive design techniques ensuring seamless user experience
-                    across various devices and platforms and demonstrating proficiency in software development.
-                    Examples: <a href="https://favorite-shows.onrender.com">Favorite Shows App</a>, <a href="https://mypythonweather.onrender.com">Python Weather App</a>, <a href="https://pythoncalculator.onrender.com">Python Calculator App</a>, <a href="https://bashataylor.github.io/Mobile_weather_app/">Weather App</a>, <a
+                <li>•	Successfully resolved and managed all complex balancing issues of the account reconciliations and general ledger entries, ensuring smooth progression of the system and vendor conversion.</li>
+                <li>•	Developed accurate and visually engaging diagrams displaying process functions while closely collaborating with management.</li>
+                <li>•	Ensured seamless operational efficiency and excellence while closely collaborating with the Director of Business Operations.</li>
+                <li>•	Developed and implemented streamlined processes and procedures, resulting in a 15% reduction in operational costs and increased productivity.</li>
+                <li>•	Demonstrated proficiency in software development by developing personal websites using responsive design techniques. Examples:  <a href="https://favorite-shows.onrender.com">Favorite Shows App</a>, <a href="https://traveldestinations-5bf0.onrender.com">Travel Destinations App</a>, <a href="https://mypythonweather.onrender.com">Python Weather App</a>, <a href="https://pythoncalculator.onrender.com">Python Calculator App</a>, <a href="https://bashataylor.github.io/Mobile_weather_app/">Weather App</a>, <a
                         href="https://bashataylor.github.io/Countdown_App/">Countdown App</a>, <a
                         href="https://bashataylor.github.io/Carousel/ ">Photo Carousel</a>.
                         
